# snn_engine2

./: .gitignore  README.md  requirements.txt
docs/: .buildinfo  genindex.html  index.html  notation.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  notation.doctree
docs/.doctrees/construction/: synapses.doctree
docs/.doctrees/simulation/: neuron_models.doctree  simulation.doctree  simulation_update.doctree  stdp.doctree
docs/_sources/: index.rst.txt
docs/_sources/simulation/: simulation_update.rst.txt  stdp.rst.txt
docs/construction/: synapses.html
docs/doctrees/: environment.pickle  index.doctree  notation.doctree
docs/doctrees/construction/: synapses.doctree
docs/doctrees/learning/: stdp.doctree
docs/doctrees/simulation/: neuron_models.doctree  simulation.doctree  simulation_update.doctree  stdp.doctree
docs/html/: .buildinfo  genindex.html  index.html  notation.html  search.html  searchindex.js
docs/html/_static/: katex_autorenderer_stdp.js
docs/html/construction/: synapses.html
docs/html/learning/: stdp.html
docs/html/simulation/: neuron_models.html  simulation.html  simulation_update.html  stdp.html
docs/simulation/: neuron_models.html  simulation.html  simulation_update.html  stdp.html
docs_src/readme_images/: Präsentation1.pptx  readme_images.pptx  ~$Präsentation1.pptx
docs_src/source/: conf.py  notation.rst
inc/archive/cmake_cuda_example/: CMakeLists.txt  bindings.cu  gpu_library.cu  gpu_library.cuh  pet2.cpp  pet2.h  test_mul.py
inc/archive/simulation/: __init__.py
inc/cuda/: helper_cuda.h
inc/pybind11/tools/: mkdoc.py
inc/sphinxcontrib-pseudocode/sphinxcontrib/: pseudocode.py
src/: README.rst  engine.py  main.py
src/app/: base_app.py  windows.py
src/app/content/: neuron_properties_collapsible.py  plot_widgets.py  scenes.py  ui_panels.py
src/configured_networks/: defaultnetwork0.py  io_network0.py  io_network1.py  network0.py  rate_network0.py
src/engine/: __init__.py  base_engine.py  base_engine_config.py  windows.py
src/engine/content/: __init__.py  chemical_control_collapsible.py  neuron_properties_collapsible.py  plot_widgets.py  scenes.py  synapse_collapsible.py  ui_panels.py
src/geometry/: __init__.py  grid_positions.py  layering.py  xyz.py
src/gpu/: __init__.py  gpu_arrays.py
src/interfaces/: __init__.py  neuron_interface.py
src/network/: __init__.py  chemical_config.py  network_array_shapes.py  network_config.py  network_grid.py  network_structures.py  spiking_neural_network.py
src/network/gpu/cpp_cuda_backend/libs/snn_construction_gpu/: CMakeLists.txt
src/network/gpu/cpp_cuda_backend/libs/snn_construction_gpu/build_ubunutu_2204/: CMakeCache.txt  Makefile  cmake_install.cmake
src/network/gpu/cpp_cuda_backend/libs/snn_construction_gpu/src/: bindings.cu  snn_construction.cu  snn_construction.cuh
src/network/gpu/cpp_cuda_backend/libs/snn_construction_gpu/src/construction/: snn_construction_bindings.cu  snn_representation.cu  snn_representation.cuh
src/network/gpu/cpp_cuda_backend/libs/snn_construction_gpu/src/simulation/: snn_simulation.cu  snn_simulation.cuh  snn_simulation_bindings.cu
src/network/gpu/cpp_cuda_backend/libs/snn_construction_gpu/src/utils/: cpp_header.h  cuda_header.h  curand_states.cu  curand_states.cuh  launch_parameters.cu  launch_parameters.cuh
src/pre_build_networks/: io_network0.py  rate_network0.py
src/rendering/: __init__.py  box.py  cuda_box.py  cuda_box_arrows.py  cuda_line.py  gpu_arrays.py  rendered_cuda_object.py  rendered_object.py  visuals.py
src/signaling/: __init__.py  signaling.py
src/utils/: __init__.py  python_utils.py
(+62 files in other folders)
